Fix color in placeholder for better contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -423,7 +423,7 @@ body {
 .lname,
 .email-cont,
 .textarea ::placeholder {
-  color: #888;
+  color: #333;
 }
 
 .btn-contact {
